--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,18 +6,23 @@ on:
       - main
 
 jobs:
-  build:
+  application-build:
     runs-on: build
-
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Build and tag Docker image
-        run: docker build -t flask:latest .
+      - name: Build and Push Docker image
+        run: |
+          docker system prune -af
+          docker build -t docker.io/sverrek/flask:latest .
+          docker login docker.io --username sverrek --password ${{ secrets.DOCKERHUB_PASSWORD }}
+          docker push docker.io/sverrek/flask:latest
+        
+        
   deploy:
     runs-on: build
-    needs: build
+    needs: application-build
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
