--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
 version: '3'
 services:
   flask:
-    build:
-      context: .
-      dockerfile: dev.Dockerfile
+    image: docker.io/sverrek/flask:latest
     ports:
       - "5000:5000"
     depends_on:
